--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="images/favicon.ico?v=2">
 	<link rel="icon" href="images/icon.jpg">
 	<link rel="icon" sizes="72x72" href="images/icon-72.jpg">
 	<link rel="icon" sizes="114x114" href="images/icon-114.jpg">
