updated email address and icon

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div id="mail" class="eight columns omega" align="center">
             <div id="mail-icons">
-                <a href="mailto:mail@jaideepbajwa.com"><img src="http://cache.gawker.com/assets/images/lifehacker/2009/08/email_icon.resized.jpg" width="48" height="48" alt="mail" /></a>
+                <a href="mailto:j.bajwa08@gmail.com"><img src="http://icons.iconarchive.com/icons/uiconstock/socialmedia/256/Email-icon.png" width="48" height="48" alt="mail" /></a>
             </div>
         </div>
 	</div>
