Fixed title name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>Jaideeep Bajwa</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Jaideep BajwaLanding Page</h1>
+                        <h1>Jaideep Bajwa</h1>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
@@ -68,10 +68,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="copyright text-muted small">"Copyright &copy; Jaideep Bajwa, site powerded by "
-                    <a href="http://startbootstrap.com">Start Bootstrap</a>
-                    "."
-                    </p>
+                    <p class="copyright text-muted small">Copyright &copy; Jaideep Bajwa, site powerded by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
                 </div>
             </div>
         </div>
