--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <a href="https://ca.linkedin.com/in/jaibajwa" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                             </li>
                             <li>
-                                <a href="mailto:j.bajwa08@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
+                                <a href="mailto:info@jaideepbajwa.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
                             </li>
                         </ul>
                     </div>
